[tool.poetry]
name = "hcloud-selfdestruct"
version = "0.0.1"
description = "cli tool to self destruct a hetzner cloud server"
authors = ["worldworm"]
readme = "README.md"
repository = "https://github.com/worldworm/hcloud-selfdestruct"
homepage = "https://github.com/worldworm/hcloud-selfdestruct"
keywords = ["selfdestruct", "hcloud", "hetzner"]
license = "MIT"
packages = [{include = "hcloud_selfdestruct"}]

[tool.poetry.dependencies]
python = "^3.10"
hcloud = "^1.18.1"
apprise = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hcloud-selfdestruct = 'hcloud_selfdestruct:main'